--- a/src/app/components/cursos/cursos.component.html
+++ b/src/app/components/cursos/cursos.component.html
@@ -1,42 +1,42 @@
 <div class="experiencia">
   <div class="titulo">
-    <h2>Educacion</h2>
-<button type="button" routerLink="/nuevaEducacion" *ngIf="isLogged">
+    <h2>Cursos</h2>
+<button type="button" routerLink="/nuevoCurso" *ngIf="isLogged">
   <img src="../../../assets/logos/agregar.png" alt="">
 </button>
   </div>
 <div>
   <table class="table">
     <tbody>
-      <tr class="tabla" *ngFor="let Educacion of educacion">
+      <tr class="tabla" *ngFor="let Curso of cursos">
         <div class="menu">
           <td *ngIf="isLogged">
-            <button routerLink="/editarEducacion/{{Educacion.id}}">
+            <button routerLink="/editarCursos/{{Curso.id}}">
               <img src="../../../assets/logos/editar.png" alt=""></button>
           </td>
           <td *ngIf="isLogged">
-            <button (click)="delete(Educacion.id)">
+            <button (click)="delete(Curso.id)">
               <img src="../../../assets/logos/borrar.png" alt=""></button>
           </td>
         </div>
         <div class="contenido">
           <div class="contenido-imagen">
-          <img src="{{Educacion.img}}" alt="">
+          <img src="{{Curso.img}}" alt="">
           </div>
           <div class="contenidoTexto">
             <h3 class="titulo">
-              {{Educacion.nombre}}
+              {{Curso.nombre}}
             </h3>
             <h4 class="texto">
-              {{Educacion.texto}}
+              {{Curso.texto}}
             </h4>
             <div class="fechas">
-              {{Educacion.desde}}
+              {{Curso.desde}}
               <p>-</p>
-              {{Educacion.hasta}}
+              {{Curso.hasta}}
             </div>
             <h5 class="lugar">
-              {{Educacion.lugar}}
+              {{Curso.lugar}}
             </h5>
 
           </div>
