--- a/src/app/components/educacion/editar-educacion/editar-educacion.component.html
+++ b/src/app/components/educacion/editar-educacion/editar-educacion.component.html
@@ -1,69 +1,72 @@
 
 <div class="total">
-    <div class="titulo">
-        <h2>Editar Experiencia</h2>
-    </div>
-  <div class="nuevo">
-    <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
-      <div class="nuevo-contenido">
+  <div class="titulo">
+      <h2>Editar Educacion</h2>
+  </div>
+<div class="nuevo">
+  <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
+    <div class="nuevo-contenido">
+      <div class="subcontenido">
+          <div>
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" [(ngModel)]="educacion.nombre" required>
+          </div>
+          <div>
+            <label for="nombre">Subtitulo:</label>
+            <input type="text" id="texto" name="texto" [(ngModel)]="educacion.texto" required>
+          </div>
+          <div>
+              <label for="nombre">Lugar:</label>
+              <input type="text" id="lugar" name="lugar" [(ngModel)]="educacion.lugar" required>
+            </div>
+        </div>
         <div class="subcontenido">
-            <div>
-              <label for="nombre">Nombre de la empresa:</label>
-              <input type="text" id="nombre" name="nombre" [(ngModel)]="expLab.nombre" required>
+          <div>
+              <label for="nombre">Desde:</label>
+              <input type="text" id="desde" name="desde" [(ngModel)]="educacion.desde" required>
             </div>
-            <div>
-              <label for="nombre">Subtitulo:</label>
-              <input type="text" id="texto" name="texto" [(ngModel)]="expLab.texto" required>
-            </div>
-            <div>
-                <label for="nombre">Lugar:</label>
-                <input type="text" id="lugar" name="lugar" [(ngModel)]="expLab.lugar" required>
-              </div>
+          <div>
+            <label for="nombre">Hasta:</label>
+            <input type="text" id="hasta" name="hasta" [(ngModel)]="educacion.hasta" required>
           </div>
-          <div class="subcontenido">
-            <div>
-                <label for="nombre">Desde:</label>
-                <input type="text" id="desde" name="desde" [(ngModel)]="expLab.desde" required>
-              </div>
-            <div>
-              <label for="nombre">Hasta:</label>
-              <input type="text" id="hasta" name="hasta" [(ngModel)]="expLab.hasta" required>
-            </div>
-            
-            <div>
-              <label for="nombre">Img:</label>
-              <input type="text" id="img" name="img" [(ngModel)]="expLab.img" required>
-            </div>
+          
+          <div>
+            <label for="nombre">Img:</label>
+            <input type="text" id="img" name="img" [(ngModel)]="educacion.img" required>
           </div>
-      </div>
-      <div class="boton">
-        <button>
-            Editar
-          </button>
-      </div>
-      
-    </form>
-
-  </div>
-  <div class="contenido">
-    <img src="{{expLab.img}}" alt="">
-
-    <div class="contenidoTexto">
-      <h3 class="titulo">
-        {{expLab.nombre}}
-      </h3>
-      <h4 class="texto">
-        {{expLab.texto}}
-      </h4>
-      <div class="fechas">
-        {{expLab.desde}}
-        <p>-</p>
-        {{expLab.hasta}}
-      </div>
-      <h5 class="lugar">
-        {{expLab.lugar}}
-      </h5>
-
+        </div>
     </div>
+    <div class="boton">
+      <button>
+          Editar
+        </button>
+    </div>
+    
+  </form>
+
+</div>
+<div class="contenido">
+  <div class="contenido-imagen">
+    <img src="{{educacion.img}}" alt="">
 
   </div>
+
+  <div class="contenidoTexto">
+    <h3 class="titulo">
+      {{educacion.nombre}}
+    </h3>
+    <h4 class="texto">
+      {{educacion.texto}}
+    </h4>
+    <div class="fechas">
+      {{educacion.desde}}
+      <p>-</p>
+      {{educacion.hasta}}
+    </div>
+    <h5 class="lugar">
+      {{educacion.lugar}}
+    </h5>
+
+  </div>
+
+</div>
