--- a/src/app/components/educacion/educacion.component.scss
+++ b/src/app/components/educacion/educacion.component.scss
@@ -24,14 +24,14 @@
     }
     table{
         padding: 0;
-        margin: 0em 0em 0em 0em;
+        margin: 0em 2em 0em 0em;
 
         max-width: 100vw;
-        width: 100%;
+        width: calc(100vw - 2.1em);
         display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: center;
+            align-items: flex-end;
         .tabla{
         margin: 0em;
             height: 180px;
@@ -51,25 +51,37 @@
             }
             .contenido{
                 display: flex;
-                flex-direction: row;
+                flex-direction:row-reverse;
                 margin: 0em 0em;
                 max-width: 600px;
-                img{
+                .contenido-imagen{
+                    display: flex;
+                    
+                    justify-content: center;
+                    align-items: center;
+                    
                     height: 150px;
                     width: 250px;
-
+                    img{
+                        height: 150px;
+                        width: 250px;
+    
+                    }
                 }
                 .contenidoTexto{
-                    margin: 0em 0em 0 1em;
+                    margin: 0em 1em 0 0em;
                     .titulo{
-                        display: block;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
                         width: 100%;
                         font-size: 20px;
                         height: 30px;
                     }
                     .texto{
-                        display: block;
-                        width: 100%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: flex-end;
                         font-size: 20px;
                         height: 30px;
 
@@ -85,6 +97,9 @@
                         height: 40px;
                     }
                     .lugar{
+                        display: flex;
+                        align-items: center;
+                        justify-content: flex-end;
                         font-size: 15px;
                         height: 30px;
                         
@@ -94,3 +109,145 @@
         }
     }
 }
+
+@media screen and (max-width: 550px){
+    .experiencia{
+        .titulo{
+            
+        font-size: 1.2em;
+            button{
+                margin: 0em 0em 0em 1em;
+                img{
+                    height: 50px;
+                }
+            }
+    
+        }
+        table{
+            margin: 0em 0em 0em 0em;
+            align-items: center;
+            width: 100%;
+            .tabla{
+
+    
+                .menu{
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    button{
+                        background-color: transparent;
+                        border: none;
+                        img{
+                            height: 50px;
+                        }
+                    }
+                }
+                .contenido{
+                    display: flex;
+                    flex-direction: column;
+                    margin: 0em 0em;
+                    max-width: 600px;
+                    .contenido-imagen{
+                        img{
+                            height: 150px;
+                            width: 250px;
+        
+                        }
+                    }
+                    
+                    .contenidoTexto{
+                        margin: 0em 0.5em 1em 0.5em;
+                        .titulo{
+                            height: 20px;
+                        margin: 0.5em 0em 0 0em;
+
+                        }
+                        .texto{
+                            height: 20px;
+    
+                        }
+                        .fechas{
+                            height: 20px;
+                        }
+                        .lugar{
+                            height: 20px;
+                            
+                        }
+                    }
+                }
+            }
+        }
+    }
+    
+  }
+  @media screen and (max-width: 300px){
+    .experiencia{
+        .titulo{
+            
+        font-size: 1.2em;
+            button{
+                margin: 0em 0em 0em 1em;
+                img{
+                    height: 50px;
+                }
+            }
+    
+        }
+        table{
+            margin: 0em 0em 0em 0em;
+
+            .tabla{
+
+    
+                .menu{
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    button{
+                        background-color: transparent;
+                        border: none;
+                        img{
+                            height: 50px;
+                        }
+                    }
+                }
+                .contenido{
+                    display: flex;
+                    flex-direction: column;
+                    margin: 0em 0em;
+                    max-width: 600px;
+                    .contenido-imagen{
+                        img{
+                            height: 125px;
+                            width: 200px;
+        
+                        }
+                    }
+                    .contenidoTexto{
+                        margin: 0em 0em 0 1em;
+                        .titulo{
+                            font-size: 15px;
+                            height: 20px;
+                        }
+                        .texto{
+                            font-size: 15px;
+                            height: 20px;
+    
+    
+                        }
+                        .fechas{
+                            font-size: 15px;
+                            height: 20px;
+                        }
+                        .lugar{
+                            font-size: 10px;
+                            height: 20px;
+                            
+                        }
+                    }
+                }
+            }
+        }
+    }
+    
+  }
