--- a/src/app/components/educacion/nueva-educacion/nueva-educacion.component.scss
+++ b/src/app/components/educacion/nueva-educacion/nueva-educacion.component.scss
@@ -5,7 +5,9 @@
     
         color: #f3f3f3;
         background-color: var(--color1);
-        height: 100vh;
+        min-height: 100vh;
+        height: 100%;
+
     .titulo{
         height: 60px;
         display: flex;
@@ -40,7 +42,7 @@
         justify-content: center;
         align-items: center;
         margin: 0em 0em;
-        // max-width: 600px;
+        max-width: 100vw;
         img{
             height: 150px;
             width: 250px;
@@ -95,6 +97,7 @@ form{
         justify-content:space-around;
        .subcontenido{
         margin: 1em;
+        width: 400px;
        }
 
     }
@@ -117,11 +120,10 @@ label{
 input{
     display: block;
     height: 20px;
-    max-width: 300px;
+    width: 100%;
     background-color: rgba(255,255,255,1);
     border-radius: 3px;
     padding: 0 10px;
-    margin-top: 8px;
     font-size: 14px;
     font-weight: 300;
 }
@@ -139,3 +141,116 @@ input{
     border-radius: 5px;
     cursor: pointer;
 }
+
+
+@media screen and (max-width: 1000px){
+    form{
+        padding:0;
+    }
+    input{
+        width: 300px;
+    }
+    .subcontenido{
+        width: 300px;
+       }
+
+}
+@media screen and (max-width: 700px){
+    input{
+        width: 250px;
+    }
+    .subcontenido{
+        width: 250px;
+        margin: 0;
+        padding: 0;
+       }
+
+}
+@media screen and (max-width: 600px){
+    input{
+        width: 200px;
+    }
+    .subcontenido{
+        width: 200px;
+        margin: 0;
+        padding: 0;
+       }
+
+}
+@media screen and (max-width: 480px){
+
+    form{
+
+        .nuevo-contenido{
+            display: flex;
+            flex-direction: column;
+
+            justify-content:center;
+            align-items:center;
+         
+            .subcontenido{
+                display: flex;
+            flex-direction: column;
+
+            justify-content:center;
+            align-items:center;
+            margin: 0;
+            width: 100%;
+               }
+        }
+    }
+    .contenido{
+        padding-top: 2em;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0em 0em;
+   
+}}
+
+
+@media screen and (max-width: 270px){
+
+    input{
+        max-width: 200px;
+        padding: 0;
+    }
+    .subcontenido{
+        max-width: 200px;
+       }
+    .contenido{
+        .contenido-imagen{
+            height: 125px;
+                width: 200px;
+            img{
+                height: 125px;
+                width: 200px;
+
+            }
+        }
+        .contenidoTexto{
+            margin: 0em 0em 0 1em;
+            .titulo{
+                font-size: 15px;
+                height: 20px;
+            }
+            .texto{
+                font-size: 15px;
+                height: 20px;
+
+
+            }
+            .fechas{
+                font-size: 15px;
+                height: 20px;
+            }
+            .lugar{
+                font-size: 10px;
+                height: 20px;
+                
+            }
+        }
+    
+}}
+
