--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,7 @@
 <app-header></app-header>
 <app-acerca-de></app-acerca-de>
 <app-experiencia></app-experiencia>
-<!-- <app-educacion></app-educacion> -->
+<app-educacion></app-educacion>
+<app-cursos></app-cursos>
+<app-habilidades></app-habilidades>
+<app-idiomas></app-idiomas>
