--- a/src/app/components/idiomas/nuevo-idioma/nuevo-idioma.component.scss
+++ b/src/app/components/idiomas/nuevo-idioma/nuevo-idioma.component.scss
@@ -38,14 +38,14 @@
     .contenido{
         padding-top: 2em;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         margin: 0em 0em;
         max-width: 100vw;
         img{
-            height: 150px;
-            width: 250px;
+            height: 100px;
+            width: 100px;
 
         }
         .contenidoTexto{
@@ -56,28 +56,8 @@
                 font-size: 20px;
                 height: 30px;
             }
-            .texto{
-                display: block;
-                width: 100%;
-                font-size: 20px;
-                height: 30px;
-
-
-            }
-            .fechas{
-                display: flex;
-                flex-direction: row;
-                width: 100%;
-                justify-content: space-evenly;
-                align-items: center;
-                font-size: 20px;
-                height: 40px;
-            }
-            .lugar{
-                font-size: 15px;
-                height: 30px;
-                
-            }
+            
+          
         }
 }
 
@@ -93,11 +73,18 @@ form{
     padding: 10px 10px;
     .nuevo-contenido{
         display: flex;
-        flex-direction: row;
-        justify-content:space-around;
+        flex-direction: column;
+        justify-content:center;
+        align-items:center;
        .subcontenido{
-        margin: 1em;
-        width: 400px;
+        margin: 0em;
+        // width:max-content;
+        input{
+        width: 600px;
+
+        }
+        max-width: 600px;
+
        }
 
     }
@@ -142,115 +129,89 @@ input{
     cursor: pointer;
 }
 
+.idiomas{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    
+    .contenido-circulos{
+        // width: 300px;
+        .menu{
 
-@media screen and (max-width: 1000px){
-    form{
-        padding:0;
-    }
-    input{
-        width: 300px;
-    }
-    .subcontenido{
-        width: 300px;
-       }
+        }
+        .circulos{
+        }
 
+    }
 }
+
+
 @media screen and (max-width: 700px){
-    input{
-        width: 250px;
+    
+    form{
+        .nuevo-contenido{
+           .subcontenido{
+            margin: 0em;
+            // width:max-content;
+            input{
+            width: 400px;
+    
+            }
+            max-width: 400px;
+    
+           }
+    
+        }
+        
     }
-    .subcontenido{
-        width: 250px;
-        margin: 0;
-        padding: 0;
-       }
-
-}
-@media screen and (max-width: 600px){
-    input{
-        width: 200px;
-    }
-    .subcontenido{
-        width: 200px;
-        margin: 0;
-        padding: 0;
-       }
+ 
 
 }
 @media screen and (max-width: 480px){
-
     form{
-
         .nuevo-contenido{
-            display: flex;
-            flex-direction: column;
-
-            justify-content:center;
-            align-items:center;
-         
-            .subcontenido{
-                display: flex;
-            flex-direction: column;
-
-            justify-content:center;
-            align-items:center;
-            margin: 0;
-            width: 100%;
-               }
+           .subcontenido{
+            margin: 0em;
+            // width:max-content;
+            input{
+            width: 200px;
+    
+            }
+            max-width: 200px;
+    
+           }
+    
         }
+        
     }
-    .contenido{
-        padding-top: 2em;
+    .idiomas{
         display: flex;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
-        margin: 0em 0em;
-   
-}}
-
+        justify-content: space-around;
+        width: 100%;
+}
+    }
+    
 
 @media screen and (max-width: 270px){
 
-    input{
-        max-width: 200px;
-        padding: 0;
-    }
-    .subcontenido{
-        max-width: 200px;
-       }
-    .contenido{
-        .contenido-imagen{
-            height: 125px;
-                width: 200px;
-            img{
-                height: 125px;
-                width: 200px;
-
-            }
-        }
-        .contenidoTexto{
-            margin: 0em 0em 0 1em;
-            .titulo{
-                font-size: 15px;
-                height: 20px;
-            }
-            .texto{
-                font-size: 15px;
-                height: 20px;
-
-
-            }
-            .fechas{
-                font-size: 15px;
-                height: 20px;
-            }
-            .lugar{
-                font-size: 10px;
-                height: 20px;
-                
-            }
-        }
+    form{
+        .nuevo-contenido{
+           .subcontenido{
+            margin: 0em;
+            // width:max-content;
+            input{
+            width: 150px;
     
+            }
+            max-width: 150px;
+    
+           }
+    
+        }
+
 }}
 
